--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iChat - Realtime Application</title>
     <!-- <script defer src="http://localhost:8000/socket.io/socket.io.js"></script> -->
-    <script defer src="https://ichat-realtime-application.herokuapp.com//socket.io/socket.io.js"></script>
+    <script defer src="https://ichat-realtime-application.herokuapp.com/socket.io/socket.io.js"></script>
     <script defer src="js/script.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
